@@ -1,15 +1,15 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import com.rarchives.ripme.ripper.rippers.HentaidudeRipper;
-import com.rarchives.ripme.utils.Utils;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class HentaidudeRipperTest extends RippersTest{
 
-    public void testRip() throws IOException {
-        HentaidudeRipper ripper = new HentaidudeRipper(new URL("https://hentaidude.com/girlfriends-4ever-dlc-2/"));
+    public void testRip() throws IOException, URISyntaxException {
+        HentaidudeRipper ripper = new HentaidudeRipper(new URI("https://hentaidude.com/girlfriends-4ever-dlc-2/").toURL());
         testRipper(ripper);
 
     }
